--- a/index.html
+++ b/index.html
@@ -7,33 +7,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
     <div class="container">
-        <div class="item">1
+        <div class="item piec">
             <div class="kolo jeden"></div>
         </div>
-        <div class="item">2
+        <div class="item szesc">
             <div class="kolo dwa"></div>
         </div>
-        <div class="item">3
+        <div class="item cztery">
             <div class="kolo trzy"></div>
         </div>
-        <div class="item">4
+        <div class="item osiem">
             <div class="kolo cztery"></div>
         </div>
-        <div class="item">5
+        <div class="item dziewiec">
             <div class="kolo piec"></div>
         </div>
-        <div class="item">6
+        <div class="item siedem">
             <div class="kolo szesc"></div>
         </div>
-        <div class="item">7
+        <div class="item trzy">
             <div class="kolo siedem"></div>
         </div>
-        <div class="item">8
+        <div class="item dwa">
             <div class="kolo osiem"></div>
         </div>
-        <div class="item">9
+        <div class="item jeden">
             <div class="kolo dziewiec"></div>
         </div>
     </div>
